<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/address_setting"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_ip"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_ip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@color/white"
                android:text="@string/ip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_port"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_port"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/port" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/order_style"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/group_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_style"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/child_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_child"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_style"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sence"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_sence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_style"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:text="@string/circuit1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_circuit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_style"
                android:gravity="center_vertical"
                android:maxLength="4"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:text="@string/circuit2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_circuit2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_style"
                android:gravity="center_vertical"
                android:maxLength="4"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:text="@string/circuit3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_circuit3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_style"
                android:gravity="center_vertical"
                android:maxLength="4"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/input_style"
        android:singleLine="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3385FF"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/search"
            android:textColor="@drawable/button_color_selector" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textColor="@drawable/button_color_selector" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:background="@drawable/button_selector"
            android:text="@string/setting"
            android:textColor="@drawable/button_color_selector" />
    </RelativeLayout>

</LinearLayout>
